objects/Opptys_Requiring_DealIDs__c.object
<CustomObject>
    <fields>
        <fullName>Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No. of tries to get the Deal ID</description>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <description>Error returned by the Web Service Call</description>
        <label>Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opptys Requiring DealIDs</relationshipLabel>
        <relationshipName>Opptys_Requiring_DealIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Stores the Opportunities which failed the deal id web service call and still require a deal id.  A Informatica job uses this object to assign deal ids when the service is down.</description>
    <label>Opptys Requiring DealIDs</label>
    <nameField>
        <label>Opptys Requiring DealIDs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opptys Requiring DealIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Attempts__c</columns>
        <columns>Error__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CONNECTION_RECEIVED.NAME</columns>
        <columns>CONNECTION_SENT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>